# Custom-Ai-Ops

./: .gitignore  .release-please-manifest.json  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE.txt  README.md  impl.md  namage.md  release-please-config.json  solve.md  tests.md
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: user-story.yml
.github/workflows/: ci.yaml  dashboards-drift.yml  opencode.yml  release-please.yml  security.yml
addons/cert-manager/: Chart.yaml
addons/external-secrets/: Chart.yaml
addons/keda/: Chart.yaml
addons/llm-d/: Chart.yaml  README.md
addons/longhorn/: Chart.yaml
addons/nvidia-gpu-operator/: Chart.yaml
addons/prometheus-stack/: Chart.yaml
addons/rdma-device-plugin/: Chart.yaml
apps/: README.md  argocd-appprojects.yaml  argocd-appset-dev.yaml  argocd-appset-prod.yaml  argocd-appset-staging.yaml  argocd-notifications.yaml  argocd-repo-credentials.yaml  external-secrets.yaml
charts/ai-gateway/: CHANGELOG.md  Chart.yaml  values.yaml
charts/bjw-template/: Chart.yaml
charts/llm-d-infrastructure/: Chart.yaml  README.md  values.yaml
charts/llm-d-router/: Chart.yaml  README.md  (+1 more)
docs/: LLM_D_IMPLEMENTATION.md  MIGRATION.md  README.md  env.md  external-tools.md  integration-report.md  roadmap.md  watchlist.md
experiments/: README.md
models/: registry.yaml
observability/: llm-d-alert-rules.yaml  prometheus-anomaly-rules.yaml
tools/: commit-lint.sh  compare-envs.py  validate-docs.sh  validate-lmcache-vllm.sh  validate-registry.sh
tools/cache-roi-calc/: Cargo.toml
tools/cache-roi-calc/src/: main.rs
(+178 files in other folders)
