[package]
name = "cache-roi-calc"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI that calculates the ROI of KV cache management based on hit rate, storage cost, and GPU savings"

[[bin]]
name = "cache-roi-calc"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }